# xontrib-zsh-cd-dot

./: README.md  pyproject.toml
xontrib/: zsh_cd_dot.py
