[tool.poetry]
name = "xontrib-zsh-cd-dot"
version = "0.1.0"
description = ""
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"
packages = [
  { include = "xontrib" }
]

[tool.poetry.dependencies]
python = ">=3.6"
xonsh = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
